# supoclip

./: .env.example  .gitignore  LICENSE  README.md  SETUP.md  build-fast.bat  docker-compose.dev.yml  docker-compose.simple.yml  docker-compose.yml  env-atual.txt  env.example  init.sql  optimize-builds.bat  start-dev.bat
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.optimized  Dockerfile.simple  README.md  pyproject.toml  requirements.txt  temp_tiktok_font_urls.css
backend/src/: ai.py  config.py  database.py  main.py  models.py  video_utils.py  youtube_utils.py
frontend/: .dockerignore  Dockerfile  Dockerfile.simple  package-lock.json  package.json
frontend/prisma/: schema.prisma
frontend/prisma/migrations/20250729012245_unified_schema/: migration.sql
frontend/prisma/migrations/20250729015305_convert_uuids_to_text/: migration.sql
frontend/prisma/migrations/20250729015341_convert_all_ids_to_text/: migration.sql
frontend/src/.next/cache/eslint/: .cache_nj6sqp
frontend/src/app/: globals.css  page.tsx
frontend/src/app/sign-in/: page.tsx
frontend/src/app/sign-up/: page.tsx
frontend/src/app/tasks/[id]/: page.tsx
frontend/src/components/: dynamic-video-player.tsx
frontend/src/components/auth/: sign-in.tsx  sign-up.tsx
frontend/src/lib/: auth-client.ts  auth.ts
waitlist/: package.json
waitlist/src/app/: layout.tsx  page.tsx
waitlist/src/app/api/waitlist/: route.ts
